# edge-infer

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  LICENSE_MIT  Makefile  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
docs/: README.md  faq.md
edge/enfer_esp32/: Cargo.toml  README.md
edge/enfer_rpi/: Cargo.toml  README.md
edge/inference_esp32/: Cargo.toml
edge/inference_esp32/src/: main.rs
edge/inference_rpi/: Cargo.toml
embedded-uniffi-bindgen/: Cargo.toml
embedded-uniffi-bindgen/src/: main.rs
enfer/: Cargo.toml
enfer_core/: Cargo.toml  README.md  build.rs
enfer_core/src/: document.rs  inference.udl
enfer_core/src/embedding/: mod.rs  semantic.rs
enfer_core/src/similarity/: cosine_similarity.rs  document_match.rs  mod.rs
enfer_core/src/store/: embedding_store.rs  memory_store.rs
enfer_grpc/: Cargo.toml
enfer_grpc/proto/tokenizer/: tokenizer.proto
enfer_wasm/: Cargo.toml  justfile
enfer_wasm/src/: lib.rs
examples/: README.md
examples/android/: build.gradle.kts  settings.gradle.kts
examples/android/app/: .gitignore  build.gradle.kts
examples/android/app/src/androidTest/java/com/unitmesh/inference/: ExampleInstrumentedTest.kt
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
examples/android/app/src/main/java/org/unitmesh/inference/: MainActivity.kt
examples/android/app/src/main/java/org/unitmesh/inference/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/app/src/test/java/com/unitmesh/inference/: ExampleUnitTest.kt
examples/android/app/src/test/java/org/unitmesh/inference/: ExampleUnitTest.kt
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/ios/: .gitignore
inference_core/: Cargo.toml  README.md  build.rs  uniffi.toml
inference_core/src/: cosine_similarity.rs  document.rs  embed.rs  embedding_match.rs  embedding_store.rs  inference.udl  lib.rs  memory_store.rs  similarity.rs
inference_core/src/embedding/: mod.rs  semantic.rs
inference_core/src/similarity/: embedding_match.rs  mod.rs  relevance_score.rs
inference_core/src/store/: embedding_store.rs  memory_store.rs  mod.rs
inference_grpc/: .gitignore  Cargo.toml  build.rs
inference_grpc/proto/tokenizer/: tokenizer.proto
inference_grpc/src/: inference_args.rs  lib.rs
inference_rpi/: Cargo.toml  README.md
inference_rpi/src/: main.rs
inference_wasm/: Cargo.toml  justfile
inference_wasm/src/: embed.rs  lib.rs
src/: embed.rs  lib.rs
