[package]
name = "enfer"
version = "0.1.0"
authors = ["Phodal <h@phodal.com>", "CGQAQ <m.jason.liu@outlook.com>"]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/unit-mesh/edge-infer"
categories = ["command-line-interface", "parsing"]
keywords = [
    "inference",
    "edge",
    "onnx",
    "model"
]
license = "MIT"
edition = "2021"
include = [
    "build.rs",
    "src/**/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    "benches/**/*",
    "examples/**/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
