[package]
name = "enfer_core"
version = "0.1.0"
authors = ["Phodal <h@phodal.com>", "CGQAQ <m.jason.liu@outlook.com>"]
description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
repository = "https://github.com/unit-mesh/edge-infer"
categories = ["command-line-interface", "parsing"]
keywords = [
    "inference",
    "edge",
    "onnx",
    "model"
]
license = "MIT"
edition = "2021"
include = [
    "build.rs",
    "src/**/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    "benches/**/*",
    "examples/**/*"
]

[features]
ci = []

[dependencies]
# follow https://github.com/pykeio/ort/issues/97
# default-features will use ureq -> ring library, which will cause error in macOS for cross-compiling
# so we disable default-features, following: https://github.com/pykeio/ort/blob/main/Cargo.toml
ort = { version = "2.0.0-alpha.1", default-features = true }

tokenizers = { version = "0.15.0", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
ndarray = "0.15.6"

uniffi = { version = "0.25" }
uuid = { version = "1.5.0", features = ["v4"] }
thiserror = "1.0.50"

# default-features will use ureq -> ring library, which will cause error in macOS for cross-compiling,
# so we disable default-features, following: https://github.com/pykeio/ort/blob/main/Cargo.toml
# all os: https://doc.rust-lang.org/reference/conditional-compilation.html#target_os
#[target.'cfg(target_os = "android")'.dependencies]
#ort = { version = "2.0.0-alpha.1", default-features = false, features = ["load-dynamic"] }
#
#[target.'cfg(target_os = "ios")'.dependencies]
#ort = { version = "2.0.0-alpha.1", default-features = false, features = ["load-dynamic"] }

[package.metadata]
ignore-bin = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "inference_core"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.25", features = ["bindgen-tests"] }
