[package]
name = "enfer_wasm"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
enfer_core = { path = "../enfer_core" }

wasm-bindgen = "0.2.88"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }

getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
