[package]
name = "inference_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# follow https://github.com/pykeio/ort/issues/97
# default-features will use ureq -> ring library, which will cause error in macOS for cross-compiling
# so we disable default-features, following: https://github.com/pykeio/ort/blob/main/Cargo.toml
ort = { git = "https://github.com/pykeio/ort.git", rev = "9a631f1", default-features = false, features = ["load-dynamic"] }
tokenizers = { version = "0.15.0", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
ndarray = "0.15.6"

uniffi = { version = "0.25", features = ["cli"] }
uuid = { version = "1.5.0", features = ["v4"] }
thiserror = "1.0.50"

# default-features will use ureq -> ring library, which will cause error in macOS for cross-compiling
# so we disable default-features, following: https://github.com/pykeio/ort/blob/main/Cargo.toml
# all os: https://doc.rust-lang.org/reference/conditional-compilation.html#target_os
[target.'cfg(windows)'.dependencies]
ort = { git = "https://github.com/pykeio/ort.git", rev = "9a631f1", default-features = true }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { git = "https://github.com/pykeio/ort.git", rev = "9a631f1", default-features = true }

[target.'cfg(linux)'.dependencies]
ort = { git = "https://github.com/pykeio/ort.git", rev = "9a631f1", default-features = true }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "inference_core"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }


[dev-dependencies]
uniffi = { version = "0.25", features = ["bindgen-tests"] }
