[package]
name = "inference_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

inference_core = { path = "../inference_core" }
clap = { version = "4.4.7", features = ["derive"] }

[[bin]]
name = "inference-server"
path = "src/bin/server.rs"

[[bin]]
name = "inference-client"
path = "src/bin/client.rs"


[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
