[package]
name = "inference_esp32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enfer_core = { path = "../../enfer_core" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
