[package]
name = "inference_esp32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inference_core = { path = "../../inference_core" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
